optimize_code_v1